--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "immutable": "^3.7.2",
     "moment": "^2.14.1",
     "moment-range": "^2.0.3",
-    "react-addons-pure-render-mixin": "^0.14.0 || 15.x.x"
+    "react-addons-pure-render-mixin": "^0.14.0 || 15.x.x",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
